[package]
name = "rledsvr"
version = "0.1.0"
authors = ["Mark Zuber <mark@zube.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../core" }
rledlib = { path = "../rledlib" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rocket = "0.4.5"
rocket_contrib = "0.4.5"