[package]
name = "rledsvr"
version = "0.1.0"
authors = ["Mark Zuber <mark@zube.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../core" }
rledlib = { path = "../rledlib" }
rpiledbind = { path = "../rpiledbind" }
lazy_static = "1.4.0"
log = "0.4.8"
pretty_env_logger = "0.4.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "0.2", features = ["macros"]}
warp = "0.2"
openssl = { version = "0.10", features = ["vendored"] }